--- a/Notebooks/1_load_data.ipynb
+++ b/Notebooks/1_load_data.ipynb
@@ -69,8 +69,8 @@
         }
       ],
       "source": [
-        "session.sql(\"CREATE DATABASE IF NOT EXISTS MLOPS;\").collect()\n",
-        "session.sql(\"CREATE SCHEMA IF NOT EXISTS MLOPS.advertising;\").collect()"
+        "session.sql(\"CREATE TRANSIENT  DATABASE IF NOT EXISTS MLOPS;\").collect()\n",
+        "session.sql(\"CREATE  TRANSIENT  SCHEMA IF NOT EXISTS MLOPS.advertising;\").collect()"
       ]
     },
     {
