--- a/Notebooks/1_load_data.ipynb
+++ b/Notebooks/1_load_data.ipynb
@@ -28,11 +28,20 @@
         }
       ],
       "source": [
-        "#with open(r'C:\\Users\\habdullayev\\Documents\\GitHub\\SnowflakeML\\Snowflake_ML_Intro\\creds.json') as f:\n",
-        "#    connection_parameters = json.load(f)\n",
-        "#session = Session.builder.configs(connection_parameters).create()\n",
-        "#print(f\"Current Database and schema: {session.get_fully_qualified_current_schema()}\")\n",
-        "#print(f\"Current Warehouse: {session.get_current_warehouse()}\")"
+        "from snowflake.snowpark import Session\n",
+        "\n",
+        "# Assuming you have environment variables set for the credentials\n",
+        "connection_parameters = {\n",
+        "    \"account\": os.getenv(\"SNOWFLAKE_ACCOUNT\"),\n",
+        "    \"user\": os.getenv(\"SNOWFLAKE_USER\"),\n",
+        "    \"password\": os.getenv(\"SNOWFLAKE_PASSWORD\"),\n",
+        "    \"schema\": os.getenv(\"SNOWFLAKE_SCHEMA\"),\n",
+        "    \"database\": os.getenv(\"SNOWFLAKE_DATABASE\"),\n",
+        "    \"role\": os.getenv(\"SNOWFLAKE_ROLE\"),\n",
+        "    \"warehouse\": os.getenv(\"SNOWFLAKE_WAREHOUSE\"),\n",
+        "}\n",
+        "\n",
+        "session = Session.builder.configs(connection_parameters).create()\n"
       ]
     },
     {
@@ -49,12 +58,12 @@
         }
       ],
       "source": [
-        "session = Session.builder.configs(SnowflakeLoginOptions()).getOrCreate()"
+        "#session = Session.builder.configs(SnowflakeLoginOptions()).getOrCreate()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
