--- a/Notebooks/1_load_data.ipynb
+++ b/Notebooks/1_load_data.ipynb
@@ -8,6 +8,7 @@
       "source": [
         "import pandas as pd\n",
         "import json\n",
+        "import os\n",
         "import snowflake.snowpark.functions as F\n",
         "from snowflake.ml.utils.connection_params import SnowflakeLoginOptions\n",
         "from snowflake.snowpark import Session"
