updated feature enginering

--- a/Notebooks/1_load_data.ipynb
+++ b/Notebooks/1_load_data.ipynb
@@ -20,8 +20,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from snowflake.snowpark import Session\n",
-        "\n",
         "# Assuming you have environment variables set for the credentials\n",
         "connection_parameters = {\n",
         "    \"account\": os.getenv(\"SNOWFLAKE_ACCOUNT\"),\n",
@@ -132,7 +130,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "avertising_df.write.mode(\"overwrite\").save_as_table(\"avertising\")"
+        "avertising_df.write.mode(\"overwrite\").save_as_table(\"advertising\")"
       ]
     }
   ],
