--- a/Notebooks/train_save_model.ipynb
+++ b/Notebooks/train_save_model.ipynb
@@ -2,23 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "import snowflake.snowpark.functions as F\n",
+    "from snowflake.snowpark.functions import udf\n",
     "from snowflake.snowpark.types import VariantType\n",
-    "\n",
     "from snowflake.snowpark.session import Session\n",
     "from snowflake.snowpark.types import StructType, StructField, FloatType\n",
     "from snowflake.snowpark import Session\n",
+    "from snowflake.snowpark.functions import col\n",
     "import os\n",
     "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +76,7 @@
        "[Row(status='Stage area ML_MODELS successfully created.')]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +100,7 @@
        "[Row(status='Statement executed successfully.')]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -167,19 +168,18 @@
        "[Row(status='Function TRAIN successfully created.')]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Execute SQL to create the stored procedure\n",
-    "session.sql(create_procedure_sql).collect()\n"
+    "session.sql(create_procedure_sql).collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "[Row(status='Statement executed successfully.')]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "'{\\n  \"R2 score on Test\": 9.533174341074796e-01,\\n  \"R2 score on Train\": 9.288133512730626e-01\\n}'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,48 +221,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from snowflake.snowpark import Session\n",
-    "from snowflake.ml.registry import Registry\n",
-    "import joblib\n",
+    "from snowflake.snowpark.functions import udf\n",
+    "import snowflake.snowpark.types as T\n",
+    "\n",
+    "def predict_sales(tv: float, radio: float, newspaper: float) -> float:\n",
+    "    import os\n",
+    "    import sys\n",
+    "    from joblib import load\n",
+    "    import pandas as pd\n",
+    "    \n",
+    "    # Specify the import directory for the Snowflake stage files\n",
+    "    IMPORT_DIRECTORY_NAME = \"snowflake_import_directory\"\n",
+    "    import_dir = sys._xoptions[IMPORT_DIRECTORY_NAME]\n",
+    "    \n",
+    "    # Load the model from the stage\n",
+    "    model_path = os.path.join(import_dir, 'model.joblib')\n",
+    "    model = load(model_path)\n",
+    "    \n",
+    "    # Prepare the input data for prediction\n",
+    "    input_data = pd.DataFrame([[tv, radio, newspaper]], columns=['TV', 'RADIO', 'NEWSPAPER'])\n",
+    "    \n",
+    "    # Perform the prediction\n",
+    "    prediction = model.predict(input_data)[0]\n",
+    "    \n",
+    "    return float(prediction)\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "(0000) Registry.log_model() got an unexpected keyword argument 'model_version'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[0;32m~/micromamba/envs/mlops/lib/python3.11/site-packages/snowflake/ml/_internal/telemetry.py:368\u001b[0m, in \u001b[0;36msend_api_usage_telemetry.<locals>.decorator.<locals>.wrap\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    367\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 368\u001b[0m     res \u001b[38;5;241m=\u001b[39m func(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m    369\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n",
-      "\u001b[0;31mTypeError\u001b[0m: Registry.log_model() got an unexpected keyword argument 'model_version'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[38], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m registry \u001b[38;5;241m=\u001b[39m Registry(session, database_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMLOPS\u001b[39m\u001b[38;5;124m'\u001b[39m, schema_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mADVERTISING\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Register the model\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m model_version \u001b[38;5;241m=\u001b[39m registry\u001b[38;5;241m.\u001b[39mlog_model(\n\u001b[1;32m      6\u001b[0m     model_name\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAdvertisingModel\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      7\u001b[0m     model_version\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mv1\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      8\u001b[0m     model_path\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m@ml_models/model.joblib\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      9\u001b[0m )\n",
-      "File \u001b[0;32m~/micromamba/envs/mlops/lib/python3.11/site-packages/snowflake/ml/_internal/telemetry.py:390\u001b[0m, in \u001b[0;36msend_api_usage_telemetry.<locals>.decorator.<locals>.wrap\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    388\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m me\u001b[38;5;241m.\u001b[39moriginal_exception \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    389\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 390\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m me\u001b[38;5;241m.\u001b[39moriginal_exception \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me\u001b[39;00m\n\u001b[1;32m    391\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    392\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m update_stmt_params_if_snowpark_df(res, statement_params)\n",
-      "\u001b[0;31mTypeError\u001b[0m: (0000) Registry.log_model() got an unexpected keyword argument 'model_version'"
+     "data": {
+      "text/plain": [
+       "<snowflake.snowpark.udf.UserDefinedFunction at 0x76c5b8297ed0>"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session.udf.register(\n",
+    "    func=predict_sales, \n",
+    "    name=\"predict_sales\", \n",
+    "    stage_location=\"@ml_models\",\n",
+    "    input_types=[T.FloatType(), T.FloatType(), T.FloatType()],\n",
+    "    return_type=T.FloatType(),\n",
+    "    replace=True, \n",
+    "    is_permanent=True, \n",
+    "    imports=['@ml_models/model.joblib'],\n",
+    "    packages=['scikit-learn==1.3.0', 'pandas', 'joblib']\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "advertising_df = session.table('ADVERTISING')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(status='Function TRAIN successfully created.')]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Adjust the procedure definition if necessary\n",
+    "create_procedure_sql = \"\"\"\n",
+    "CREATE OR REPLACE PROCEDURE train()\n",
+    "  RETURNS VARIANT\n",
+    "  LANGUAGE PYTHON\n",
+    "  RUNTIME_VERSION = 3.11\n",
+    "  PACKAGES = ('snowflake-snowpark-python', 'scikit-learn', 'joblib')\n",
+    "  HANDLER = 'main'\n",
+    "AS $$\n",
+    "import os\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from joblib import dump\n",
+    "\n",
+    "def main(session):\n",
+    "  df = session.table('ADVERTISING').to_pandas()\n",
+    "  X = df[['TV', 'RADIO', 'NEWSPAPER']]\n",
+    "  y = df['SALES']\n",
+    "  X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state = 42)\n",
+    "  numeric_features = ['TV', 'RADIO', 'NEWSPAPER']\n",
+    "  numeric_transformer = Pipeline(steps=[('poly', PolynomialFeatures(degree = 2)),('scaler', StandardScaler())])\n",
+    "  preprocessor = ColumnTransformer(transformers=[('num', numeric_transformer, numeric_features)])\n",
+    "  pipeline = Pipeline(steps=[('preprocessor', preprocessor),('classifier', LinearRegression(n_jobs=-1))])\n",
+    "  model = GridSearchCV(pipeline, param_grid={}, n_jobs=-1, cv=10)\n",
+    "  model.fit(X_train, y_train)\n",
+    "  model_file = os.path.join('/tmp', 'model.joblib')\n",
+    "  dump(model, model_file)\n",
+    "  session.file.put(model_file, \"@ml_models\", overwrite=True)\n",
+    "  return {\"R2 score on Train\": model.score(X_train, y_train), \"R2 score on Test\": model.score(X_test, y_test)}\n",
+    "$$;\n",
+    "\"\"\"\n",
+    "# Execute the SQL to create the procedure\n",
+    "session.sql(create_procedure_sql).collect()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<snowflake.snowpark.udf.UserDefinedFunction at 0x76c59ed8c550>"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from snowflake.snowpark.functions import udf\n",
+    "import snowflake.snowpark.types as T\n",
+    "\n",
+    "# Define the UDF function\n",
+    "def predict_sales(tv: float, radio: float, newspaper: float) -> float:\n",
+    "    import os\n",
+    "    import sys\n",
+    "    from joblib import load\n",
+    "    import pandas as pd\n",
+    "    \n",
+    "    # Specify the import directory for the Snowflake stage files\n",
+    "    IMPORT_DIRECTORY_NAME = \"snowflake_import_directory\"\n",
+    "    import_dir = sys._xoptions[IMPORT_DIRECTORY_NAME]\n",
+    "    \n",
+    "    # Load the model from the stage\n",
+    "    model_path = os.path.join(import_dir, 'model.joblib')\n",
+    "    model = load(model_path)\n",
+    "    \n",
+    "    # Prepare the input data for prediction\n",
+    "    input_data = pd.DataFrame([[tv, radio, newspaper]], columns=['TV', 'RADIO', 'NEWSPAPER'])\n",
+    "    \n",
+    "    # Perform the prediction\n",
+    "    prediction = model.predict(input_data)[0]\n",
+    "    \n",
+    "    return float(prediction)\n",
+    "\n",
+    "# Register the UDF\n",
+    "session.udf.register(\n",
+    "    func=predict_sales, \n",
+    "    name=\"predict_sales\", \n",
+    "    stage_location=\"@ml_models\",\n",
+    "    input_types=[T.FloatType(), T.FloatType(), T.FloatType()],\n",
+    "    return_type=T.FloatType(),\n",
+    "    replace=True, \n",
+    "    is_permanent=True, \n",
+    "    imports=['@ml_models/model.joblib'],\n",
+    "    packages=['scikit-learn', 'pandas', 'joblib']\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------------------------\n",
+      "|\"TV\"   |\"RADIO\"  |\"NEWSPAPER\"  |\"PREDICTED_SALES\"   |\n",
+      "------------------------------------------------------\n",
+      "|230.1  |37.8     |69.2         |21.886417875690817  |\n",
+      "|44.5   |39.3     |45.1         |10.372262452131155  |\n",
+      "|17.2   |45.9     |69.3         |9.113870015216659   |\n",
+      "|151.5  |41.3     |58.5         |18.388258741022366  |\n",
+      "|180.8  |10.8     |58.4         |16.125779196227914  |\n",
+      "|8.7    |48.9     |75.0         |8.805982700924098   |\n",
+      "|57.5   |32.8     |23.5         |10.576290497207951  |\n",
+      "|120.2  |19.6     |11.6         |13.689984286660831  |\n",
+      "|8.6    |2.1      |1.0          |5.743650332055633   |\n",
+      "|199.8  |2.6      |21.2         |16.197702901058705  |\n",
+      "------------------------------------------------------\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Create a registry instance\n",
-    "registry = Registry(session, database_name='MLOPS', schema_name='ADVERTISING')\n",
+    "from snowflake.snowpark.functions import col\n",
+    "import snowflake.snowpark.functions as F\n",
     "\n",
-    "# Register the model\n",
-    "model_version = registry.log_model(\n",
-    "    model_name=\"AdvertisingModel\",\n",
-    "    model_version=\"v1\",\n",
-    "    model_path=\"@ml_models/model.joblib\"\n",
-    ")"
+    "# Load the Advertising DataFrame\n",
+    "advertising_df = session.table('ADVERTISING')\n",
+    "\n",
+    "# Apply the UDF for predictions\n",
+    "predicted_sales_df = advertising_df.select(\n",
+    "    col('TV'),\n",
+    "    col('RADIO'),\n",
+    "    col('NEWSPAPER'),\n",
+    "    F.call_udf('predict_sales', col('TV'), col('RADIO'), col('NEWSPAPER')).alias('PREDICTED_SALES')\n",
+    ")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predicted_sales_df.show()"
    ]
   }
  ],
