--- a/Notebooks/train_save_model.ipynb
+++ b/Notebooks/train_save_model.ipynb
@@ -91,94 +91,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Row(status='Statement executed successfully.')]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "session.sql(\n",
-    "    f\"ALTER WAREHOUSE {session.get_current_warehouse()[1:-1]} SET WAREHOUSE_SIZE=LARGE;\"\n",
-    ").collect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "create_procedure_sql = \"\"\"\n",
-    "CREATE OR REPLACE PROCEDURE train()\n",
-    "  RETURNS VARIANT\n",
-    "  LANGUAGE PYTHON\n",
-    "  RUNTIME_VERSION = 3.11\n",
-    "  PACKAGES = ('snowflake-snowpark-python', 'scikit-learn', 'joblib')\n",
-    "  HANDLER = 'main'\n",
-    "AS $$\n",
-    "import os\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import PolynomialFeatures\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
-    "from joblib import dump\n",
-    "\n",
-    "def main(session):\n",
-    "  df = session.table('ADVERTISING').to_pandas()\n",
-    "  X = df[['TV', 'RADIO', 'NEWSPAPER']]\n",
-    "  y = df['SALES']\n",
-    "  X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state = 42)\n",
-    "  numeric_features = ['TV', 'RADIO', 'NEWSPAPER']\n",
-    "  numeric_transformer = Pipeline(steps=[('poly',PolynomialFeatures(degree = 2)),('scaler', StandardScaler())])\n",
-    "  preprocessor = ColumnTransformer(transformers=[('num', numeric_transformer, numeric_features)])\n",
-    "  pipeline = Pipeline(steps=[('preprocessor', preprocessor),('classifier', LinearRegression(n_jobs=-1))])\n",
-    "  model = GridSearchCV(pipeline, param_grid={}, n_jobs=-1, cv=10)\n",
-    "  model.fit(X_train, y_train)\n",
-    "  model_file = os.path.join('/tmp', 'model.joblib')\n",
-    "  dump(model, model_file)\n",
-    "  session.file.put(model_file, \"@ml_models\",overwrite=True)\n",
-    "  return {\"R2 score on Train\": model.score(X_train, y_train), \"R2 score on Test\": model.score(X_test, y_test)}\n",
-    "$$;\n",
-    "\"\"\"\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Row(status='Function TRAIN successfully created.')]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "session.sql(create_procedure_sql).collect()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -201,99 +113,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'{\\n  \"R2 score on Test\": 9.533174341074796e-01,\\n  \"R2 score on Train\": 9.288133512730626e-01\\n}'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "session.call('train')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from snowflake.snowpark.functions import udf\n",
-    "import snowflake.snowpark.types as T\n",
-    "\n",
-    "def predict_sales(tv: float, radio: float, newspaper: float) -> float:\n",
-    "    import os\n",
-    "    import sys\n",
-    "    from joblib import load\n",
-    "    import pandas as pd\n",
-    "    \n",
-    "    # Specify the import directory for the Snowflake stage files\n",
-    "    IMPORT_DIRECTORY_NAME = \"snowflake_import_directory\"\n",
-    "    import_dir = sys._xoptions[IMPORT_DIRECTORY_NAME]\n",
-    "    \n",
-    "    # Load the model from the stage\n",
-    "    model_path = os.path.join(import_dir, 'model.joblib')\n",
-    "    model = load(model_path)\n",
-    "    \n",
-    "    # Prepare the input data for prediction\n",
-    "    input_data = pd.DataFrame([[tv, radio, newspaper]], columns=['TV', 'RADIO', 'NEWSPAPER'])\n",
-    "    \n",
-    "    # Perform the prediction\n",
-    "    prediction = model.predict(input_data)[0]\n",
-    "    \n",
-    "    return float(prediction)\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<snowflake.snowpark.udf.UserDefinedFunction at 0x76c5b8297ed0>"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "session.udf.register(\n",
-    "    func=predict_sales, \n",
-    "    name=\"predict_sales\", \n",
-    "    stage_location=\"@ml_models\",\n",
-    "    input_types=[T.FloatType(), T.FloatType(), T.FloatType()],\n",
-    "    return_type=T.FloatType(),\n",
-    "    replace=True, \n",
-    "    is_permanent=True, \n",
-    "    imports=['@ml_models/model.joblib'],\n",
-    "    packages=['scikit-learn==1.3.0', 'pandas', 'joblib']\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "advertising_df = session.table('ADVERTISING')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
    "outputs": [
@@ -309,7 +128,7 @@
     }
    ],
    "source": [
-    "# Adjust the procedure definition if necessary\n",
+    "\n",
     "create_procedure_sql = \"\"\"\n",
     "CREATE OR REPLACE PROCEDURE train()\n",
     "  RETURNS VARIANT\n",
@@ -331,36 +150,65 @@
     "  df = session.table('ADVERTISING').to_pandas()\n",
     "  X = df[['TV', 'RADIO', 'NEWSPAPER']]\n",
     "  y = df['SALES']\n",
-    "  X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state = 42)\n",
+    "  X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "  \n",
     "  numeric_features = ['TV', 'RADIO', 'NEWSPAPER']\n",
-    "  numeric_transformer = Pipeline(steps=[('poly', PolynomialFeatures(degree = 2)),('scaler', StandardScaler())])\n",
+    "  numeric_transformer = Pipeline(steps=[('poly', PolynomialFeatures()), ('scaler', StandardScaler())])\n",
     "  preprocessor = ColumnTransformer(transformers=[('num', numeric_transformer, numeric_features)])\n",
-    "  pipeline = Pipeline(steps=[('preprocessor', preprocessor),('classifier', LinearRegression(n_jobs=-1))])\n",
-    "  model = GridSearchCV(pipeline, param_grid={}, n_jobs=-1, cv=10)\n",
+    "  pipeline = Pipeline(steps=[('preprocessor', preprocessor), ('classifier', LinearRegression(n_jobs=-1))])\n",
+    "\n",
+    "  # Define parameter grid for GridSearchCV\n",
+    "  param_grid = {\n",
+    "      'preprocessor__num__poly__degree': [2, 3],\n",
+    "      'classifier__fit_intercept': [True, False]\n",
+    "  }\n",
+    "\n",
+    "  model = GridSearchCV(pipeline, param_grid=param_grid, n_jobs=-1, cv=10)\n",
     "  model.fit(X_train, y_train)\n",
+    "  \n",
     "  model_file = os.path.join('/tmp', 'model.joblib')\n",
     "  dump(model, model_file)\n",
     "  session.file.put(model_file, \"@ml_models\", overwrite=True)\n",
-    "  return {\"R2 score on Train\": model.score(X_train, y_train), \"R2 score on Test\": model.score(X_test, y_test)}\n",
+    "  \n",
+    "  return {\"Best parameters\": model.best_params_, \"R2 score on Train\": model.score(X_train, y_train), \"R2 score on Test\": model.score(X_test, y_test)}\n",
     "$$;\n",
     "\"\"\"\n",
-    "# Execute the SQL to create the procedure\n",
-    "session.sql(create_procedure_sql).collect()\n",
-    "\n"
+    "session.sql(create_procedure_sql).collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Execute the stored procedure to train the model\n",
+    "session.sql(\"CALL train()\").show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session.sql(\n",
+    "    f\"ALTER WAREHOUSE {session.get_current_warehouse()[1:-1]} SET WAREHOUSE_SIZE=LARGE;\"\n",
+    ").collect()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<snowflake.snowpark.udf.UserDefinedFunction at 0x76c59ed8c550>"
+       "<snowflake.snowpark.udf.UserDefinedFunction at 0x76c59e949d10>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,15 +227,9 @@
     "    # Specify the import directory for the Snowflake stage files\n",
     "    IMPORT_DIRECTORY_NAME = \"snowflake_import_directory\"\n",
     "    import_dir = sys._xoptions[IMPORT_DIRECTORY_NAME]\n",
-    "    \n",
-    "    # Load the model from the stage\n",
     "    model_path = os.path.join(import_dir, 'model.joblib')\n",
     "    model = load(model_path)\n",
-    "    \n",
-    "    # Prepare the input data for prediction\n",
     "    input_data = pd.DataFrame([[tv, radio, newspaper]], columns=['TV', 'RADIO', 'NEWSPAPER'])\n",
-    "    \n",
-    "    # Perform the prediction\n",
     "    prediction = model.predict(input_data)[0]\n",
     "    \n",
     "    return float(prediction)\n",
@@ -403,12 +245,29 @@
     "    is_permanent=True, \n",
     "    imports=['@ml_models/model.joblib'],\n",
     "    packages=['scikit-learn', 'pandas', 'joblib']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from snowflake.snowpark.functions import col\n",
+    "import snowflake.snowpark.functions as F\n",
+    "advertising_df = session.table('ADVERTISING')\n",
+    "predicted_sales_df = advertising_df.select(\n",
+    "    col('TV'),\n",
+    "    col('RADIO'),\n",
+    "    col('NEWSPAPER'),\n",
+    "    F.call_udf('predict_sales', col('TV'), col('RADIO'), col('NEWSPAPER')).alias('PREDICTED_SALES')\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -431,31 +290,26 @@
       "------------------------------------------------------\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Bad pipe message: %s [b'0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7\\r\\nHost: localhost:39381\\r\\nUs', b'-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/126.']\n",
+      "Bad pipe message: %s [b'0.0 Safari/537.36\\r\\nAccept-Encoding: gzip, defla']\n",
+      "Bad pipe message: %s [b', br, zstd\\r\\nAccept-Language: en-GB,en-US;q=0.9,en;q=0.8,de-DE;q=0.7,de;q=0.6,az-AZ;q=0.5,az;q=0.4\\r\\nCache-Control: m', b'-age=0\\r\\nReferer: https://github.com/\\r\\nX-Request-ID: 71d2a66a6d2b1980a9952c5c330abb83\\r\\nX-Real-IP:']\n",
+      "Bad pipe message: %s [b'0.240.0.10\\r\\nX-Forwarded-Port: 4', b'\\r\\nX-Forwarded-Scheme: https\\r\\nX-Original-URI: /\\r\\nX-S', b'eme: https\\r\\nDNT: 1\\r\\nsec-fetch-site: cross-site\\r\\nsec-fetch-mode: navigate\\r\\nsec-fetch-dest: document']\n",
+      "Bad pipe message: %s [b'sec-ch-ua: \"']\n",
+      "Bad pipe message: %s [b't/A)Brand\";v=\"8\", \"Chromium\";v=\"126\", \"Google Chrome\";v=\"126\"\\r\\nsec-ch-ua-mobi', b': ?0\\r\\nsec-ch-ua-platform: \"Windows\"\\r\\npriority: u=0, i\\r\\nX-Original-Proto: https\\r\\nX-Forwarded-Proto: https\\r\\nX', b'orwarded-Host: stunning-engine-w59g5w75qpgh5']\n",
+      "Bad pipe message: %s [b'0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7\\r\\nHost: localhost:39381\\r\\nUs', b'-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/126.']\n",
+      "Bad pipe message: %s [b'0.0 Safari/537.36\\r\\nAccept-Encoding: gzip, defla']\n",
+      "Bad pipe message: %s [b', br, zstd\\r\\nAccept-Language: en-GB,en-US;q=0.9,en;q=0.8,de-DE;q=0.7,de;q=0.6,az-AZ;q=0.5,az;q=0.4\\r\\nReferer: https:/', b'tunning-engine-w59g5w75qpgh5rr7.github.dev/\\r\\nX', b'equest-ID: 1b54d79d54716a3b54ec638ad0048ceb\\r']\n",
+      "Bad pipe message: %s [b'-Real-IP:']\n",
+      "Bad pipe message: %s [b'0.240.4.3\\r\\nX-Forwarded-Port: 44', b'\\nX-Forwarded-Scheme: https\\r\\nX-Original-URI: /\\r\\nX-S', b'eme: https\\r\\nsec-ch-ua: \"Not/A)Brand\";v=\"8\", \"Chromium\";v=\"126\", \"Google Chrome\";v=\"126\"\\r\\nsec-ch-ua']\n",
+      "Bad pipe message: %s [b'obile: ?0\\r\\nsec-ch-ua-platform: \"Windows\"\\r\\nDN', b' 1\\r\\nsec-fetch-site: same-site\\r\\nsec-fetch-mode: navigate\\r\\nsec-fetch-user: ?1\\r\\nsec-fe']\n"
+     ]
     }
    ],
-   "source": [
-    "from snowflake.snowpark.functions import col\n",
-    "import snowflake.snowpark.functions as F\n",
-    "\n",
-    "# Load the Advertising DataFrame\n",
-    "advertising_df = session.table('ADVERTISING')\n",
-    "\n",
-    "# Apply the UDF for predictions\n",
-    "predicted_sales_df = advertising_df.select(\n",
-    "    col('TV'),\n",
-    "    col('RADIO'),\n",
-    "    col('NEWSPAPER'),\n",
-    "    F.call_udf('predict_sales', col('TV'), col('RADIO'), col('NEWSPAPER')).alias('PREDICTED_SALES')\n",
-    ")\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "predicted_sales_df.show()"
    ]
