Completed the project

--- a/Notebooks/train_save_model.ipynb
+++ b/Notebooks/train_save_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "[Row(status='Stage area ML_MODELS successfully created.')]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -100,20 +100,20 @@
        "[Row(status='Statement executed successfully.')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "session.sql(\n",
-    "    f\"ALTER WAREHOUSE {session.get_current_warehouse()[1:-1]} SET WAREHOUSE_SIZE=XSMALL;\"\n",
-    ").collect()"
+    "    f\"ALTER WAREHOUSE {session.get_current_warehouse()[1:-1]} SET WAREHOUSE_SIZE=LARGE;\"\n",
+    ").collect()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "[Row(status='Function TRAIN successfully created.')]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,9 +178,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(status='Statement executed successfully.')]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session.sql(\n",
+    "    f\"ALTER WAREHOUSE {session.get_current_warehouse()[1:-1]} SET WAREHOUSE_SIZE=XSMALL;\"\n",
+    ").collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------------------------\n",
+      "|\"TRAIN\"                                       |\n",
+      "------------------------------------------------\n",
+      "|{                                             |\n",
+      "|  \"Best parameters\": {                        |\n",
+      "|    \"classifier__fit_intercept\": true,        |\n",
+      "|    \"preprocessor__num__poly__degree\": 2      |\n",
+      "|  },                                          |\n",
+      "|  \"R2 score on Test\": 9.533174341074796e-01,  |\n",
+      "|  \"R2 score on Train\": 9.288133512730626e-01  |\n",
+      "|}                                             |\n",
+      "------------------------------------------------\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Execute the stored procedure to train the model\n",
     "session.sql(\"CALL train()\").show()\n"
@@ -188,27 +230,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "session.sql(\n",
-    "    f\"ALTER WAREHOUSE {session.get_current_warehouse()[1:-1]} SET WAREHOUSE_SIZE=LARGE;\"\n",
-    ").collect()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<snowflake.snowpark.udf.UserDefinedFunction at 0x76c59e949d10>"
+       "<snowflake.snowpark.udf.UserDefinedFunction at 0x297cf5e8f10>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -290,28 +321,36 @@
       "------------------------------------------------------\n",
       "\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Bad pipe message: %s [b'0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7\\r\\nHost: localhost:39381\\r\\nUs', b'-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/126.']\n",
-      "Bad pipe message: %s [b'0.0 Safari/537.36\\r\\nAccept-Encoding: gzip, defla']\n",
-      "Bad pipe message: %s [b', br, zstd\\r\\nAccept-Language: en-GB,en-US;q=0.9,en;q=0.8,de-DE;q=0.7,de;q=0.6,az-AZ;q=0.5,az;q=0.4\\r\\nCache-Control: m', b'-age=0\\r\\nReferer: https://github.com/\\r\\nX-Request-ID: 71d2a66a6d2b1980a9952c5c330abb83\\r\\nX-Real-IP:']\n",
-      "Bad pipe message: %s [b'0.240.0.10\\r\\nX-Forwarded-Port: 4', b'\\r\\nX-Forwarded-Scheme: https\\r\\nX-Original-URI: /\\r\\nX-S', b'eme: https\\r\\nDNT: 1\\r\\nsec-fetch-site: cross-site\\r\\nsec-fetch-mode: navigate\\r\\nsec-fetch-dest: document']\n",
-      "Bad pipe message: %s [b'sec-ch-ua: \"']\n",
-      "Bad pipe message: %s [b't/A)Brand\";v=\"8\", \"Chromium\";v=\"126\", \"Google Chrome\";v=\"126\"\\r\\nsec-ch-ua-mobi', b': ?0\\r\\nsec-ch-ua-platform: \"Windows\"\\r\\npriority: u=0, i\\r\\nX-Original-Proto: https\\r\\nX-Forwarded-Proto: https\\r\\nX', b'orwarded-Host: stunning-engine-w59g5w75qpgh5']\n",
-      "Bad pipe message: %s [b'0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7\\r\\nHost: localhost:39381\\r\\nUs', b'-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/126.']\n",
-      "Bad pipe message: %s [b'0.0 Safari/537.36\\r\\nAccept-Encoding: gzip, defla']\n",
-      "Bad pipe message: %s [b', br, zstd\\r\\nAccept-Language: en-GB,en-US;q=0.9,en;q=0.8,de-DE;q=0.7,de;q=0.6,az-AZ;q=0.5,az;q=0.4\\r\\nReferer: https:/', b'tunning-engine-w59g5w75qpgh5rr7.github.dev/\\r\\nX', b'equest-ID: 1b54d79d54716a3b54ec638ad0048ceb\\r']\n",
-      "Bad pipe message: %s [b'-Real-IP:']\n",
-      "Bad pipe message: %s [b'0.240.4.3\\r\\nX-Forwarded-Port: 44', b'\\nX-Forwarded-Scheme: https\\r\\nX-Original-URI: /\\r\\nX-S', b'eme: https\\r\\nsec-ch-ua: \"Not/A)Brand\";v=\"8\", \"Chromium\";v=\"126\", \"Google Chrome\";v=\"126\"\\r\\nsec-ch-ua']\n",
-      "Bad pipe message: %s [b'obile: ?0\\r\\nsec-ch-ua-platform: \"Windows\"\\r\\nDN', b' 1\\r\\nsec-fetch-site: same-site\\r\\nsec-fetch-mode: navigate\\r\\nsec-fetch-user: ?1\\r\\nsec-fe']\n"
-     ]
     }
    ],
    "source": [
     "predicted_sales_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warehouse COMPUTE_WH has been suspended successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    current_warehouse = session.get_current_warehouse()\n",
+    "    session.sql(\n",
+    "        f\"ALTER WAREHOUSE {current_warehouse[1:-1]} SUSPEND\"\n",
+    "    ).collect()\n",
+    "    print(f'Warehouse {current_warehouse[1:-1]} has been suspended successfully.')\n",
+    "except Exception as e:\n",
+    "    print(f'Error suspending the warehouse: {e}')\n",
+    "finally:\n",
+    "    session.close()"
    ]
   }
  ],
@@ -331,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
